@@ -100,8 +100,9 @@ public abstract class AbstractTreeNode implements TreeNodeWithChangeSupport {
 	 * <li>
 	 * The {@link #parent} is not cloned and is left as <code>null</code>
 	 * because the new {@link AbstractTreeNode} will get a parent set as soon as
-	 * it is added/linked again to a {@link Model} somehow, but cloning the
-	 * parent could lead to an infinite loop.</li>
+	 * it is added/linked again to a {@link Model}. Note that only the top-level
+   * element of the cloned sub-tree will have a <code>null</code> value as its
+   * parent. All sub-element will point to their correct parent element..</li>
 	 * <li>{@link #listOfListeners} is needed in all other setXX() methods.
 	 * Cloning these might lead to strange and unexpected behavior, because when
 	 * doing a deep cloning, the listeners of the old object would suddenly be
